--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "## Database Schema\n",
-    "<img src=\"database-schema.png\">"
+    "<img src=\"Database-Schema.png\">"
    ]
   },
   {
