--- a/index.ipynb
+++ b/index.ipynb
@@ -788,7 +788,7 @@
    "metadata": {},
    "source": [
     "## Combining the where and having clause\n",
-    "We can also use jthe where and having clause in conjunction with each other for more complex rules.\n",
+    "We can also use the where and having clause in conjunction with each other for more complex rules.\n",
     "For example, let's say we want a list of customers who have made at least 3 purchases of over 50K each."
    ]
   },
