updating language for consistency with previous lessons

--- a/index.ipynb
+++ b/index.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "In this section, you'll learn how to use aggregate functions in SQL.\n",
+    "Just as with Pandas, another very useful manipulation in SQL is aggregate functions. For example, you may wish to find the mean, median, min or max of a column feature. For example, in the customer relational database that you've been working with, you may wonder if there are differences in overall sales across offices or regions.\n",
     "\n",
     "## Objectives\n",
     "\n",
@@ -21,8 +21,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Database Schema\n",
+    "<img src=\"Database-Schema.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,20 +42,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Database Schema\n",
-    "<img src=\"Database-Schema.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Connecting to the Database"
+    "## Connecting to the Database\n",
+    "\n",
+    "As usual, start by creating a connection to the database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,206 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Boston</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>London</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NYC</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Paris</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Sydney</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Tokyo</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               0  1\n",
-       "0         Boston  2\n",
-       "1         London  2\n",
-       "2            NYC  2\n",
-       "3          Paris  5\n",
-       "4  San Francisco  6\n",
-       "5         Sydney  4\n",
-       "6          Tokyo  2"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Here we join the offices and employees tables in order to count the number of employees per city.\n",
-    "cur.execute(\"\"\"select city,\n",
-    "                      count(employeeNumber)\n",
-    "                      from offices\n",
-    "                      join employees\n",
-    "                      using(officeCode)\n",
-    "                      group by city;\"\"\")\n",
-    "pd.DataFrame(cur.fetchall())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Ordering and Aliasing\n",
-    "We can also alias our groupby by specifying the number of our selection order that we want to group by. Additionally, we can also order or limit our selection with the order by and limit clauses."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Paris</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Sydney</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Boston</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>London</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               0  1\n",
-       "0  San Francisco  6\n",
-       "1          Paris  5\n",
-       "2         Sydney  4\n",
-       "3         Boston  2\n",
-       "4         London  2"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cur.execute(\"\"\"select city,\n",
-    "                      count(employeeNumber)\n",
-    "                      from offices\n",
-    "                      join employees\n",
-    "                      using(officeCode)\n",
-    "                      group by 1\n",
-    "                      order by count(employeeNumber) desc\n",
-    "                      limit 5;\"\"\")\n",
-    "pd.DataFrame(cur.fetchall())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Retrieving Column Names\n",
-    "Recall that we can also retrieve our column names when using sqlite3 (note that this will be the default behavior in other environments such as sql workbench)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -332,22 +135,22 @@
        "4         London                      2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Here we join the offices and employees tables in order to count the number of employees per city.\n",
     "cur.execute(\"\"\"select city,\n",
     "                      count(employeeNumber)\n",
     "                      from offices\n",
     "                      join employees\n",
     "                      using(officeCode)\n",
-    "                      group by 1\n",
-    "                      order by count(employeeNumber) desc\n",
-    "                      limit 5;\"\"\")\n",
+    "                      group by city\n",
+    "                      order by count(employeeNumber) desc;\"\"\")\n",
     "df = pd.DataFrame(cur.fetchall())\n",
-    "df. columns = [i[0] for i in cur.description]\n",
+    "df.columns = [x[0] for x in cur.description]\n",
     "df.head()"
    ]
   },
@@ -355,13 +158,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aliasing our Aggregate Function Name\n",
-    "Now that we can view our column names, we can also practice using alias's to name our aggregations."
+    "## Aliasing\n",
+    "You can also alias our groupby by specifying the number of our selection order that we want to group by. This is simply written as `group by 1` 1 referring to the first column name that we are selecting.\n",
+    "\n",
+    "Additionally, we can also rename our aggregate to a more descriptive name using the `as` clause."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +191,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>city</th>\n",
-       "      <th>employeeCount</th>\n",
+       "      <th>numEmployees</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -420,30 +225,29 @@
        "</div>"
       ],
       "text/plain": [
-       "            city  employeeCount\n",
-       "0  San Francisco              6\n",
-       "1          Paris              5\n",
-       "2         Sydney              4\n",
-       "3         Boston              2\n",
-       "4         London              2"
+       "            city  numEmployees\n",
+       "0  San Francisco             6\n",
+       "1          Paris             5\n",
+       "2         Sydney             4\n",
+       "3         Boston             2\n",
+       "4         London             2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cur.execute(\"\"\"select city,\n",
-    "                      count(employeeNumber) as employeeCount\n",
+    "                      count(employeeNumber) as numEmployees\n",
     "                      from offices\n",
     "                      join employees\n",
     "                      using(officeCode)\n",
     "                      group by 1\n",
-    "                      order by count(employeeNumber) desc\n",
-    "                      limit 5;\"\"\")\n",
+    "                      order by numEmployees desc;\"\"\")\n",
     "df = pd.DataFrame(cur.fetchall())\n",
-    "df. columns = [i[0] for i in cur.description]\n",
+    "df.columns = [x[0] for x in cur.description]\n",
     "df.head()"
    ]
   },
@@ -993,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
