--- a/index.ipynb
+++ b/index.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "## Database Schema\n",
-    "<img src=\"Database-Schema.png\">"
+    "<img src=\"images/Database-Schema.png\">"
    ]
   },
   {
@@ -797,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
