--- a/index.ipynb
+++ b/index.ipynb
@@ -786,7 +786,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "After this section, you should have a good idea of how to use aggregate functions, aliases and the having clause to filter selections."
+    "After this section, you should have a good idea of how to use aggregate functions, aliases, and the having clause to filter selections."
    ]
   }
  ],
