minor changes for redeployment

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,10 +14,10 @@
     "\n",
     "You will be able to:\n",
     "\n",
-    "* Write queries with aggregate functions like `COUNT`, `MAX`, `MIN`, and `SUM`\n",
-    "* Create an alias for the return value of an aggregate function\n",
-    "* Use `GROUP BY` to sort the data sets returned by aggregate functions\n",
-    "* Compare aggregates using the `HAVING` clause"
+    "- Write queries with aggregate functions like `COUNT`, `MAX`, `MIN`, and `SUM`\n",
+    "- Create an alias for the return value of an aggregate function\n",
+    "- Use `GROUP BY` to sort the data sets returned by aggregate functions\n",
+    "- Compare aggregates using the `HAVING` clause"
    ]
   },
   {
@@ -806,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   },
   "toc": {
    "base_numbering": 1,
