--- a/index.ipynb
+++ b/index.ipynb
@@ -14,10 +14,11 @@
     "\n",
     "You will be able to:\n",
     "\n",
-    "- Write queries with aggregate functions like `COUNT`, `MAX`, `MIN`, and `SUM`\n",
-    "- Create an alias for the return value of an aggregate function\n",
-    "- Use `GROUP BY` to sort the data sets returned by aggregate functions\n",
-    "- Compare aggregates using the `HAVING` clause"
+    "* Describe the relationship between aggregate functions and `GROUP BY` statements\n",
+    "* Use `GROUP BY` statements in SQL to apply aggregate functions like: `COUNT`, `MAX`, `MIN`, and `SUM`\n",
+    "* Create an alias in a SQL query\n",
+    "* Use the `HAVING` clause to compare different aggregates\n",
+    "* Compare the difference between the `WHERE` and `HAVING` clause"
    ]
   },
   {
@@ -786,7 +787,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "After this section, you should have a good idea of how to use aggregate functions, aliases, and the having clause to filter selections."
+    "In this lesson, you learned how to use aggregate functions, aliases, and the `HAVING` clause to filter selections."
    ]
   }
  ],
@@ -806,7 +807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
