fix data types in all tables

--- a/index.ipynb
+++ b/index.ipynb
@@ -321,8 +321,8 @@
        "      <th>0</th>\n",
        "      <td>Euro+ Shopping Channel</td>\n",
        "      <td>13</td>\n",
-       "      <td>116208.40</td>\n",
-       "      <td>65071.26</td>\n",
+       "      <td>20009.53</td>\n",
+       "      <td>120166.58</td>\n",
        "      <td>55056.844615</td>\n",
        "      <td>715738.98</td>\n",
        "    </tr>\n",
@@ -330,8 +330,8 @@
        "      <th>1</th>\n",
        "      <td>Mini Gifts Distributors Ltd.</td>\n",
        "      <td>9</td>\n",
-       "      <td>101244.59</td>\n",
-       "      <td>85410.87</td>\n",
+       "      <td>11044.30</td>\n",
+       "      <td>111654.40</td>\n",
        "      <td>64909.804444</td>\n",
        "      <td>584188.24</td>\n",
        "    </tr>\n",
@@ -339,7 +339,7 @@
        "      <th>2</th>\n",
        "      <td>Australian Collectors, Co.</td>\n",
        "      <td>4</td>\n",
-       "      <td>44894.74</td>\n",
+       "      <td>7565.08</td>\n",
        "      <td>82261.22</td>\n",
        "      <td>45146.267500</td>\n",
        "      <td>180585.07</td>\n",
@@ -357,8 +357,8 @@
        "      <th>4</th>\n",
        "      <td>Dragon Souveniers, Ltd.</td>\n",
        "      <td>4</td>\n",
+       "      <td>2611.84</td>\n",
        "      <td>105743.00</td>\n",
-       "      <td>44380.15</td>\n",
        "      <td>39062.757500</td>\n",
        "      <td>156251.03</td>\n",
        "    </tr>\n",
@@ -367,12 +367,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                   customerName  number_purchases min_purchase max_purchase  \\\n",
-       "0        Euro+ Shopping Channel                13    116208.40     65071.26   \n",
-       "1  Mini Gifts Distributors Ltd.                 9    101244.59     85410.87   \n",
-       "2    Australian Collectors, Co.                 4     44894.74     82261.22   \n",
-       "3            Muscle Machine Inc                 4     20314.44     58841.35   \n",
-       "4       Dragon Souveniers, Ltd.                 4    105743.00     44380.15   \n",
+       "                   customerName  number_purchases  min_purchase  max_purchase  \\\n",
+       "0        Euro+ Shopping Channel                13      20009.53     120166.58   \n",
+       "1  Mini Gifts Distributors Ltd.                 9      11044.30     111654.40   \n",
+       "2    Australian Collectors, Co.                 4       7565.08      82261.22   \n",
+       "3            Muscle Machine Inc                 4      20314.44      58841.35   \n",
+       "4       Dragon Souveniers, Ltd.                 4       2611.84     105743.00   \n",
        "\n",
        "   avg_purchase  total_spent  \n",
        "0  55056.844615    715738.98  \n",
@@ -397,7 +397,7 @@
     "               FROM customers\n",
     "               JOIN payments\n",
     "               USING(customerNumber)\n",
-    "               GROUP BY 1\n",
+    "               GROUP BY customerName\n",
     "               ORDER BY SUM(amount) DESC;\"\"\")\n",
     "df = pd.DataFrame(cur.fetchall())\n",
     "df. columns = [i[0] for i in cur.description]\n",
@@ -445,7 +445,7 @@
        "      <td>Royale Belge</td>\n",
        "      <td>4</td>\n",
        "      <td>1128.20</td>\n",
-       "      <td>1627.56</td>\n",
+       "      <td>14379.90</td>\n",
        "      <td>7304.295000</td>\n",
        "      <td>29217.18</td>\n",
        "    </tr>\n",
@@ -453,8 +453,8 @@
        "      <th>94</th>\n",
        "      <td>Frau da Collezione</td>\n",
        "      <td>2</td>\n",
-       "      <td>17746.26</td>\n",
        "      <td>7612.06</td>\n",
+       "      <td>17746.26</td>\n",
        "      <td>12679.160000</td>\n",
        "      <td>25358.32</td>\n",
        "    </tr>\n",
@@ -462,8 +462,8 @@
        "      <th>95</th>\n",
        "      <td>Atelier graphique</td>\n",
        "      <td>3</td>\n",
+       "      <td>1676.14</td>\n",
        "      <td>14571.44</td>\n",
-       "      <td>6066.78</td>\n",
        "      <td>7438.120000</td>\n",
        "      <td>22314.36</td>\n",
        "    </tr>\n",
@@ -490,12 +490,12 @@
        "</div>"
       ],
       "text/plain": [
-       "               customerName  number_purchases min_purchase max_purchase  \\\n",
-       "93             Royale Belge                 4      1128.20      1627.56   \n",
-       "94       Frau da Collezione                 2     17746.26      7612.06   \n",
-       "95        Atelier graphique                 3     14571.44      6066.78   \n",
-       "96  Auto-Moto Classics Inc.                 3      5858.56      9658.74   \n",
-       "97        Boards & Toys Co.                 2      3452.75      4465.85   \n",
+       "               customerName  number_purchases  min_purchase  max_purchase  \\\n",
+       "93             Royale Belge                 4       1128.20      14379.90   \n",
+       "94       Frau da Collezione                 2       7612.06      17746.26   \n",
+       "95        Atelier graphique                 3       1676.14      14571.44   \n",
+       "96  Auto-Moto Classics Inc.                 3       5858.56       9658.74   \n",
+       "97        Boards & Toys Co.                 2       3452.75       4465.85   \n",
        "\n",
        "    avg_purchase  total_spent  \n",
        "93   7304.295000     29217.18  \n",
@@ -603,7 +603,7 @@
    "source": [
     "## Combining the `WHERE` and `HAVING` clause\n",
     "We can also use the `WHERE` and `HAVING` clauses in conjunction with each other for more complex rules.\n",
-    "For example, let's say we want a list of customers who have made at least 3 purchases of over 50K each."
+    "For example, let's say we want a list of customers who have made at least 2 purchases of over 50K each."
    ]
   },
   {
@@ -615,7 +615,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "53\n"
+      "4\n"
      ]
     },
     {
@@ -647,27 +647,22 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Euro+ Shopping Channel</td>\n",
-       "      <td>13</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Mini Gifts Distributors Ltd.</td>\n",
-       "      <td>9</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Anna's Decorations, Ltd</td>\n",
-       "      <td>4</td>\n",
+       "      <td>Muscle Machine Inc</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Australian Collectors, Co.</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Baane Mini Imports</td>\n",
-       "      <td>4</td>\n",
+       "      <td>Online Diecast Creations Co.</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -675,11 +670,10 @@
       ],
       "text/plain": [
        "                   customerName  number_purchases_over_50K\n",
-       "0        Euro+ Shopping Channel                         13\n",
-       "1  Mini Gifts Distributors Ltd.                          9\n",
-       "2       Anna's Decorations, Ltd                          4\n",
-       "3    Australian Collectors, Co.                          4\n",
-       "4            Baane Mini Imports                          4"
+       "0        Euro+ Shopping Channel                          5\n",
+       "1  Mini Gifts Distributors Ltd.                          5\n",
+       "2            Muscle Machine Inc                          2\n",
+       "3  Online Diecast Creations Co.                          2"
       ]
      },
      "execution_count": 8,
@@ -694,91 +688,13 @@
     "               JOIN payments\n",
     "               USING(customerNumber)\n",
     "               WHERE amount >= 50000\n",
-    "               GROUP BY 1\n",
-    "               HAVING count(amount) >= 3\n",
+    "               GROUP BY customerName\n",
+    "               HAVING count(amount) >= 2\n",
     "               ORDER BY count(amount) DESC;\"\"\")\n",
     "df = pd.DataFrame(cur.fetchall())\n",
     "df. columns = [i[0] for i in cur.description]\n",
     "print(len(df))\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customerName</th>\n",
-       "      <th>number_purchases_over_50K</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>Stylish Desk Decors, Co.</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>Suominen Souveniers</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>Toys of Finland, Co.</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>Toys4GrownUps.com</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>Vitachrome Inc.</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                customerName  number_purchases_over_50K\n",
-       "48  Stylish Desk Decors, Co.                          3\n",
-       "49       Suominen Souveniers                          3\n",
-       "50      Toys of Finland, Co.                          3\n",
-       "51         Toys4GrownUps.com                          3\n",
-       "52           Vitachrome Inc.                          3"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.tail()"
    ]
   },
   {
@@ -807,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
