Notebook updated by fis-canvas image script

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "Once again we will be using this database, with 8 tables relating to customers, orders, employees, etc.\n",
     "\n",
-    "<img src=\"images/Database-Schema.png\">"
+    "<img src=\"https://curriculum-content.s3.amazonaws.com/data-science/images/Database-Schema.png\">"
    ]
   },
   {
